# neknow-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  run_dev.sh
cmd/api/: main.go
cmd/worker/: main.go
internal/auth/domain/: auth.go
internal/auth/dto/: auth.go
internal/auth/handler/: auth.go
internal/auth/repository/: auth.go  repository.go
internal/auth/service/: auth.go
internal/bot/domain/: bot.go
internal/bot/dto/: bot.go
internal/bot/handler/: bot.go
internal/bot/repository/: bot.go
internal/bot/service/: bot.go
internal/chat/domain/: chat.go
internal/chat/dto/: chat.go
internal/chat/handler/: chat.go
internal/chat/repository/: conversation.go  message.go
migrations/: 000001_create_users_table.up.sql  000002_create_bots_table.up.sql  000003_create_files_table.down.sql  000003_create_files_table.up.sql  000004_create_chat_sessions_table.down.sql  000004_create_chat_sessions_table.up.sql  000005_create_messages_table.down.sql  000005_create_messages_table.up.sql
pkg/ai/: rag_client.go
pkg/config/: config.go
pkg/database/: migration.go  postgres.go  redis.go
pkg/logger/: logger.go
pkg/middleware/: auth.go
pkg/queue/: rabbitmq.go
pkg/response/: response.go
pkg/storage/: minio.go
scripts/: test_api.sh
worker/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
worker/eval/: auto_test.py  index_local.py  qa_attention.json  rag_evaluation.md  test_rag.py
worker/src/: config.py
worker/src/api/: rag.py
worker/src/consumer/: document_consumer.py
worker/src/processor/: chunker.py  embedder.py  parser.py
worker/src/storage/: minio.py  vector_store.py
(+7 files in other folders)
